--- a/projects.css
+++ b/projects.css
@@ -18,6 +18,7 @@ body{
     color : var(--text);
     line-height: 1.6;
     overflow-x: hidden;
+    user-select: none;
 }
 
 .nav-bar{
@@ -314,4 +315,22 @@ footer{
         margin-bottom: 3em;
 }
 
+}
+
+ @keyframes appears {
+    from{
+        opacity : 0;
+        scale: 0.5;
+    }
+    to{
+        opacity : 1;
+                scale: 1;
+
+    }
+}   
+
+.duo{
+    animation: appears  linear;
+    animation-timeline: view();
+    animation-range: entry 0%;
 }
