--- a/projects.css
+++ b/projects.css
@@ -317,20 +317,8 @@ footer{
 
 }
 
- @keyframes appears {
-    from{
-        opacity : 0;
-        scale: 0.5;
-    }
-    to{
-        opacity : 1;
-                scale: 1;
-
-    }
-}   
-
-.duo{
-    animation: appears  linear;
-    animation-timeline: view();
-    animation-range: entry 0%;
-}
+  .duo {
+    opacity: 0;
+    transform: scale(0.5);
+    will-change: opacity, transform; /* Improves performance */
+  }
